Готова обычная версия. НЕ ГОТОВА для GhP

--- a/src/html/blocks/footer/footer.html
+++ b/src/html/blocks/footer/footer.html
@@ -8,7 +8,7 @@
 
 				<ul class="footer__menu-list">
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">Меню</span><span
 									class="footer__menu-item-chi">菜单</span>
@@ -24,7 +24,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">О РЕСТОРАНЕ</span><span
 									class="footer__menu-item-chi">关于该餐厅</span>
@@ -32,7 +32,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">ВАКАНСИИ</span><span
 									class="footer__menu-item-chi">职位空缺</span>
@@ -40,7 +40,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">ДОСТАВКА</span><span
 									class="footer__menu-item-chi">送货</span>
@@ -48,7 +48,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">БАНКЕТЫ</span><span
 									class="footer__menu-item-chi">宴会</span>
@@ -56,7 +56,7 @@
 						</a>
 					</li>
 					<li class="footer__menu-item">
-						<a href="#" class="footer__menu-item-link">
+						<a href="inDeveloping.html" class="footer__menu-item-link">
 							<div class="footer__menu-item-text">
 								<span class="footer__menu-item-text-rus">КОНТАКТЫ</span><span
 									class="footer__menu-item-chi">联系我们</span>
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="footer__secondary-block">
-				<a href="#" class="footer__secondary-block-rules-link">
+				<a href="inDeveloping.html" class="footer__secondary-block-rules-link">
 					<p class="footer__secondary-block-rules">Политика конфиденциальности Правила ресторана</p>
 				</a>
 				<div class="footer__secondary-block-payment">
