--- a/src/html/blocks/header/mobile-nav.html
+++ b/src/html/blocks/header/mobile-nav.html
@@ -15,31 +15,31 @@
 				<nav class="mobile-menu">
 					<ul class="mobile-menu__list">
 						<li class="mobile-menu__item">
-							<a href="#" class="mobile-menu__link">
+							<a href="inDeveloping.html" class="mobile-menu__link">
 								<span class="mobile-menu__text-rus">Меню</span>
 								<span class="mobile-menu__text-chi">菜单</span>
 							</a>
 						</li>
 						<li class="mobile-menu__item">
-							<a href="#" class="mobile-menu__link">
+							<a href="inDeveloping.html" class="mobile-menu__link">
 								<span class="mobile-menu__text-rus">О ресторане</span>
 								<span class="mobile-menu__text-chi">关于该餐厅 </span>
 							</a>
 						</li>
 						<li class="mobile-menu__item">
-							<a href="#" class="mobile-menu__link">
+							<a href="inDeveloping.html" class="mobile-menu__link">
 								<span class="mobile-menu__text-rus">Доставка</span>
 								<span class="mobile-menu__text-chi">送货 </span>
 							</a>
 						</li>
 						<li class="mobile-menu__item">
-							<a href="#" class="mobile-menu__link">
+							<a href="inDeveloping.html" class="mobile-menu__link">
 								<span class="mobile-menu__text-rus">Информация</span>
 								<span class="mobile-menu__text-chi">信息</span>
 							</a>
 						</li>
 						<li class="mobile-menu__item">
-							<a href="#" class="mobile-menu__link">
+							<a href="inDeveloping.html" class="mobile-menu__link">
 								<span class="mobile-menu__text-rus">Контакты</span>
 								<span class="mobile-menu__text-chi">联系我们</span>
 							</a>
@@ -58,7 +58,7 @@
 						<span class="mobive-nav__point-work-time-text">с 9:00-03:00</span>
 					</div>
 
-					<a href="#" class="mobive-nav__point-adress">
+					<a href="inDeveloping.html" class="mobive-nav__point-adress">
 						<img src="img/sprite.svg#header--nav-map" class="svg-header--nav-map-dims" alt="header--nav-map">
 						<span class="mobive-nav__point-adress-text">ул. Верхние Поля, дв56с4, Москва</span>
 					</a>
@@ -71,7 +71,7 @@
 				</div>
 
 				<div class="header__booking delivery mobive-nav__to-user">
-					<a href="#" class="big_button delivery__link header__booking-link mobile-nav__to-user-account-btn">
+					<a href="inDeveloping.html" class="big_button delivery__link header__booking-link mobile-nav__to-user-account-btn">
 						
 						
 						<span class="header__booking-text-chi header__booking-text">私人办公室</span>
