--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -58,7 +58,7 @@
 			</div>
 			<ul class="section-menu__card-list">
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -68,7 +68,7 @@
 					</a>
 
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
 							<h6 class="dish-card__title-rus"> Ассорти из холодных мясных закусок
 								с соусом</h6>
@@ -98,7 +98,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -107,7 +107,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">辣酱猪舌和牛肉色拉</h6>
 							<h6 class="dish-card__title-rus">Салат из свиного языка
 								и говядины
@@ -138,7 +138,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -147,7 +147,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
 							<h6 class="dish-card__title-rus">Ассорти из холодных
 								мясных закусок с соусом карбонара и морковью </h6>
@@ -177,7 +177,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -186,7 +186,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">清蒸鸡 炒菜</h6>
 							<h6 class="dish-card__title-rus">Цыпленок на пару
 								под соусом</h6>
@@ -216,7 +216,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -225,7 +225,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">辣炒 羊肉排骨</h6>
 							<h6 class="dish-card__title-rus">Жареные острые
 								бараньи ребра</h6>
@@ -255,7 +255,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -264,7 +264,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">烤羊肉 洋葱和兹拉</h6>
 							<h6 class="dish-card__title-rus">Жареная баранина
 								с луком и зирой</h6>
@@ -294,7 +294,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -303,7 +303,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">清蒸中国鲟鱼</h6>
 							<h6 class="dish-card__title-rus">Китайский осетр
 								на пару</h6>
@@ -333,7 +333,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -342,7 +342,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">多宝鱼</h6>
 							<h6 class="dish-card__title-rus">Тюрбо</h6>
 						</a>
@@ -371,7 +371,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -380,7 +380,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">冬荫功汤</h6>
 							<h6 class="dish-card__title-rus">Суп Том Ям</h6>
 						</a>
@@ -409,7 +409,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -418,7 +418,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">炒豆子馅饼</h6>
 							<h6 class="dish-card__title-rus">Жареные шарики
 								с начинкой из бобов</h6>
@@ -448,7 +448,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -457,7 +457,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">蔬菜烤肉 和辣酱</h6>
 							<h6 class="dish-card__title-rus">Жареная свинина
 								с овощами
@@ -488,7 +488,7 @@
 					</div>
 				</li>
 				<li class="dish-card">
-					<a href="#" class="dish-card__img-link">
+					<a href="inDeveloping.html" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
 							<div class="dish-card__label-new">New</div>
@@ -497,7 +497,7 @@
 						</div>
 					</a>
 					<div class="dish-card__text-container">
-						<a href="#" class="dish-card__title">
+						<a href="inDeveloping.html" class="dish-card__title">
 							<h6 class="dish-card__title-chi">甜酱烤肉</h6>
 							<h6 class="dish-card__title-rus">Жареная свинина
 								в сладком соусе</h6>
