--- a/src/html/blocks/aboutUs.html
+++ b/src/html/blocks/aboutUs.html
@@ -35,7 +35,7 @@
 						class="aboutUs__inside-btn aboutUs__switcher-btn aboutUs__switcher-btn--active">внутри</button>
 					<button class="aboutUs__outside-btn aboutUs__switcher-btn">снаружи</button>
 				</div>
-				<a href="#" class="big_button aboutUs__booking-link">
+				<a href="inDeveloping.html" class="big_button aboutUs__booking-link">
 					<span class=" aboutUs__booking-text-rus aboutUs__booking-text">Забронировать стол</span>
 					<div class="aboutUs__booking-separator"></div>
 					<span class="aboutUs__booking-text-chi aboutUs__booking-text">预订座位</span>
