--- a/src/html/blocks/header/header-inDeveloping.html
+++ b/src/html/blocks/header/header-inDeveloping.html
@@ -36,31 +36,31 @@
 							class="svg-icons--burger-dims" style="width: 37px; " alt="icons--burger"></button>
 					<ul class="menu">
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Меню</span>
 								<span class="menu__text-chi">菜单</span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">О ресторане</span>
 								<span class="menu__text-chi">关于该餐厅 </span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Доставка</span>
 								<span class="menu__text-chi">送货 </span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Информация</span>
 								<span class="menu__text-chi">信息</span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Контакты</span>
 								<span class="menu__text-chi">联系我们</span>
 							</a>
@@ -84,7 +84,7 @@
 
 			<div class=" header__to-index">
 				<div class="header__booking booking">
-					<a href="#" class="big_button booking__link header__booking-link">
+					<a href="index.html" class="big_button booking__link header__booking-link">
 						<span class="header__booking-text-rus header__booking-text"> Вернуться на главную</span>
 						<div class="header__booking-separator"></div>
 						<span class="header__booking-text-chi header__booking-text">返回主页</span>
