--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -20,7 +20,7 @@
 			@@include('header-slider.html')
 			<div class="header__top">
 				<div class="header__point-info">
-					<a href="#" class="header__point-adress">
+					<a href="inDeveloping.html" class="header__point-adress">
 						<img src="img/sprite.svg#footer--map" class="svg-footer--map-dims" alt="footer--map">
 						<span class="header__point-adress-text">ул. Верхние Поля, дв56с4, Москва</span>
 					</a>
@@ -36,31 +36,31 @@
 							class="svg-icons--burger-dims" style="width: 37px; " alt="icons--burger"></button>
 					<ul class="menu">
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Меню</span>
 								<span class="menu__text-chi">菜单</span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">О ресторане</span>
 								<span class="menu__text-chi">关于该餐厅 </span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Доставка</span>
 								<span class="menu__text-chi">送货 </span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Информация</span>
 								<span class="menu__text-chi">信息</span>
 							</a>
 						</li>
 						<li class="menu__item">
-							<a href="#" class="menu__link">
+							<a href="inDeveloping.html" class="menu__link">
 								<span class="menu__text-rus">Контакты</span>
 								<span class="menu__text-chi">联系我们</span>
 							</a>
@@ -73,10 +73,10 @@
 						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<a href="tel: +79541238507"><span class="header__phone-text">+7 954 123-85-07</span></a>
 					</div>
-					<a href="#" class="red-shine small_button header__user-cab-link header__user-tools">
+					<a href="inDeveloping.html" class="red-shine small_button header__user-cab-link header__user-tools">
 						<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
 					</a>
-					<a href="#" class="red-shine small_button header__cart-link header__user-tools">
+					<a href="inDeveloping.html" class="red-shine small_button header__cart-link header__user-tools">
 						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 							alt="main--menu--cart">
 						<span class="header__cart-items-qauntity">0</span>
@@ -91,14 +91,14 @@
 
 			<div class="header__booking-block">
 				<div class="header__booking booking">
-					<a href="#" class="big_button booking__link header__booking-link">
+					<a href="inDeveloping.html" class="big_button booking__link header__booking-link">
 						<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
 						<div class="header__booking-separator"></div>
 						<span class="header__booking-text-chi header__booking-text">预订座位</span>
 					</a>
 				</div>
 				<div class="header__booking delivery">
-					<a href="#" class="big_button delivery__link header__booking-link">
+					<a href="inDeveloping.html" class="big_button delivery__link header__booking-link">
 						<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
 						<div class="header__booking-separator"></div>
 						<span class="header__booking-text-chi header__booking-text">食品配送</span>
