--- a/src/html/blocks/reviews-slider.html
+++ b/src/html/blocks/reviews-slider.html
@@ -26,7 +26,9 @@
 					<span class="reviews__slider-card-date">13 февраля 2023</span>
 					<div class="reviews__slider-card-author">
 						<div class="reviews__slider-card-avatar">
-							<img src="../../img/main/rewievs/client-1.png" alt="ava-1">
+							<img src="img/main/rewievs/client-1.png" alt="ava-1">
+							<!-- <img src="Ancient-China-Restaurant/img/main/rewievs/client-1.png" alt="ava-1"> -->
+							<!-- <img src="../../img/main/rewievs/client-1.png" alt="ava-1"> -->
 						</div>
 						<div class="reviews__slider-card-name">Валёк Солдатов</div>
 					</div>
@@ -56,7 +58,9 @@
 					<span class="reviews__slider-card-date">26 сентября 2023</span>
 					<div class="reviews__slider-card-author">
 						<div class="reviews__slider-card-avatar">
-							<img src="../../img/main/rewievs/client-3.png" alt="ava-3">
+							<img src="img/main/rewievs/client-3.png" alt="ava-3">
+							<!-- <img src="Ancient-China-Restaurant/img/main/rewievs/client-3.png" alt="ava-3"> -->
+							<!-- <img src="../../img/main/rewievs/client-3.png" alt="ava-3"> -->
 						</div>
 						<div class="reviews__slider-card-name">Александра Лось</div>
 					</div>
@@ -87,7 +91,9 @@
 					<span class="reviews__slider-card-date">22 октября 2023</span>
 					<div class="reviews__slider-card-author">
 						<div class="reviews__slider-card-avatar">
-							<img src="../../img/main/rewievs/client-2.png" alt="ava-2">
+							<img src="img/main/rewievs/client-2.png" alt="ava-2">
+							<!-- <img src="Ancient-China-Restaurant/img/main/rewievs/client-2.png" alt="ava-2"> -->
+							<!-- <img src="../../img/main/rewievs/client-2.png" alt="ava-2"> -->
 						</div>
 						<div class="reviews__slider-card-name">Павлов Эдуард</div>
 					</div>
@@ -129,7 +135,9 @@
 					<span class="reviews__slider-card-date">9 сентября 2023</span>
 					<div class="reviews__slider-card-author">
 						<div class="reviews__slider-card-avatar">
-							<img src="../../img/main/rewievs/client-4.png" alt="ava-4">
+							<img src="img/main/rewievs/client-4.png" alt="ava-4">
+							<!-- <img src="Ancient-China-Restaurant/img/main/rewievs/client-4.png" alt="ava-4"> -->
+							<!-- <img src="../../img/main/rewievs/client-4.png" alt="ava-4"> -->
 						</div>
 						<div class="reviews__slider-card-name">Виктор Шегай</div>
 					</div>
