включил автопрокрутку слайдеров, "оживил" счетчик, скрыл стрелочки в отзывах

--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -90,7 +90,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -130,7 +130,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -169,7 +169,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -208,7 +208,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -247,7 +247,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -286,7 +286,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -325,7 +325,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -363,7 +363,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -401,7 +401,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -440,7 +440,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -480,7 +480,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
@@ -519,7 +519,7 @@
 									<div class="dish-card__plus-icon"></div>
 								</button>
 							</div>
-							<button class="red-shine small_button dish-card__add-to-cart-btn">
+							<button class="red-shine  dish-card__add-to-cart-btn">
 								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
 									alt="main--menu--cart">
 							</button>
