--- a/src/html/blocks/features.html
+++ b/src/html/blocks/features.html
@@ -21,7 +21,7 @@
 					<img src="img/sprite.svg#features--delivery-time" class="svg-features--delivery-time-dims"
 						alt="features--delivery-time">
 					<div class="features__text">
-						<span class="features__text-rus">Доставка работает с 10:00-00:00 / </span>
+						<span class="features__text-rus">Работа доставки с 10:00-00:00 / </span>
 						<span class="features__text-chi">送货时 10:00-00:00</span>
 					</div>
 				</li>
