--- a/src/html/blocks/footer/footer.html
+++ b/src/html/blocks/footer/footer.html
@@ -71,7 +71,7 @@
 								alt="footer--phone" />
 						</div>
 						<div class="footer__contact-block-title">Контактный телефон:</div>
-						<div class="footer__contact-block-text">+7 954 123-85-07</div>
+						<div class="footer__contact-block-text"><a href="tel: +79541238507"><span>+7 954 123-85-07</span></a></div>
 					</div>
 					<div class="footer__contact-block-item footer__adress">
 						<div class="footer__contact-block-item-img">
