--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -69,10 +69,14 @@
 				</nav>
 
 				<div class="header__user">
-					<div class="header__phone">
+					<!-- <div class="header__phone">
 						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<a href="tel: +79541238507"><span class="header__phone-text">+7 954 123-85-07</span></a>
-					</div>
+					</div> -->
+					<a class="header__phone" href="tel: +79541238507">
+						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
+						<span class="header__phone-text">+7 954 123-85-07</span>
+					</a>
 					<a href="inDeveloping.html" class="red-shine small_button header__user-cab-link header__user-tools">
 						<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
 					</a>
