--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Древний Китай</title>
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -73,7 +73,7 @@
 						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<a href="tel: +79541238507"><span class="header__phone-text">+7 954 123-85-07</span></a>
 					</div> -->
-					<a class="header__phone" href="tel: +79541238507">
+					<a class="header__phone" href="tel:+79541238507">
 						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<span class="header__phone-text">+7 954 123-85-07</span>
 					</a>
