--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -80,14 +80,14 @@
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old">1920 ₽ </div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -120,14 +120,14 @@
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -159,14 +159,14 @@
 							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -198,14 +198,14 @@
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -237,14 +237,14 @@
 							<div class="dish-card__price-current">1680 ₽ </div>
 							<div class="dish-card__price-old">2220 ₽</div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -276,14 +276,14 @@
 							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -315,14 +315,14 @@
 							<div class="dish-card__price-current">3280 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -353,14 +353,14 @@
 							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -391,14 +391,14 @@
 							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -430,14 +430,14 @@
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
@@ -470,14 +470,14 @@
 							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine dish-card__add-to-cart-btn">
@@ -509,14 +509,14 @@
 							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
-						<form action="" class="dish-card__purchase">
+						<form action="#" class="dish-card__purchase">
 							<div class="dish-card__counter-block">
 								<button class="dish-card__minus">
-									<div class="dish-card__minus-icon"></div>
+									<span class="dish-card__minus-icon"></span>
 								</button>
 								<input type="number" class="dish-card__counter" value="0">
 								<button class="dish-card__plus">
-									<div class="dish-card__plus-icon"></div>
+									<span class="dish-card__plus-icon"></span>
 								</button>
 							</div>
 							<button class="red-shine  dish-card__add-to-cart-btn">
