--- a/src/html/blocks/footer/footer.html
+++ b/src/html/blocks/footer/footer.html
@@ -3,7 +3,7 @@
 		<div class="footer__inner">
 			<div class="footer__main-block">
 				<a href="index.html" class="footer__logo-link">
-					<img class="footer__logo-img" src="img/logo.png" alt="logo-footer" />
+					<img class="footer__logo-img" src="img/logo.png" alt="logo-footer">
 				</a>
 
 				<ul class="footer__menu-list">
@@ -68,20 +68,20 @@
 					<div class="footer__contact-block-item footer__contact">
 						<div class="footer__contact-block-item-img">
 							<img src="img/sprite.svg#footer--phone" class="svg-footer--phone-dims"
-								alt="footer--phone" />
+								alt="footer--phone">
 						</div>
 						<div class="footer__contact-block-title">Контактный телефон:</div>
-						<div class="footer__contact-block-text"><a href="tel: +79541238507"><span>+7 954 123-85-07</span></a></div>
+						<div class="footer__contact-block-text"><a href="tel:+79541238507"><span>+7 954 123-85-07</span></a></div>
 					</div>
 					<div class="footer__contact-block-item footer__adress">
 						<div class="footer__contact-block-item-img">
-							<img src="img/sprite.svg#footer--map" class="svg-footer--map-dims" alt="footer--map" />
+							<img src="img/sprite.svg#footer--map" class="svg-footer--map-dims" alt="footer--map">
 						</div>
 						<div class="footer__contact-block-title">Адрес ресторана:</div>
 						<div class="footer__contact-block-text">ул. Верхние Поля, дв56с4, Москва</div>
 					</div>
 					<div class="footer__contact-block-item footer__rating">
-						<img src="img/footer/y-rating.png" alt="y-rating" />
+						<img src="img/footer/y-rating.png" alt="y-rating">
 					</div>
 				</div>
 			</div>
@@ -90,9 +90,9 @@
 					<p class="footer__secondary-block-rules">Политика конфиденциальности Правила ресторана</p>
 				</a>
 				<div class="footer__secondary-block-payment">
-					<img src="img/footer/sberpay.png" alt="sberpay" />
-					<img src="img/footer/sbp.png" alt="sbp" />
-					<img src="img/footer/nal.png" alt="nal" />
+					<img src="img/footer/sberpay.png" alt="sberpay">
+					<img src="img/footer/sbp.png" alt="sbp">
+					<img src="img/footer/nal.png" alt="nal">
 				</div>
 				<p class="footer__secondary-block-copyright">2023 © «Древний Китай». <br> Все материалы данного сайта
 					являются объектами авторского права.</p>
