Правки по валидации

--- a/src/html/blocks/features.html
+++ b/src/html/blocks/features.html
@@ -1,7 +1,7 @@
 <section class="features">
 	<div class="container">
 		<div class="features__inner">
-			<h2 class="features__title"></h2>
+			<h2 class="features__title">Преимущества</h2>
 			<ul class="features__list">
 				<li class="features__item features__delivery-speed">
 					<img src="img/sprite.svg#features--delivery-speed" class="svg-features--delivery-speed-dims"
