--- a/src/html/blocks/map.html
+++ b/src/html/blocks/map.html
@@ -1,6 +1,6 @@
 <section class="map">
 	<div class="map__inner">
-		<h2 class="map__title"></h2>
+		<h2 class="map__title">Карта</h2>
 		<div class="map__ya-map-box">
 			<div style="position:relative;overflow:hidden;"><a
 					href="https://yandex.ru/maps/org/drevniy_kitay/129623926357/?utm_medium=mapframe&utm_source=maps"
@@ -10,7 +10,7 @@
 					href="https://yandex.ru/maps/213/moscow/category/cafe/184106390/?utm_medium=mapframe&utm_source=maps"
 					style="color:#eee;font-size:12px;position:absolute;top:28px;">Кафе в Москве</a><iframe
 					src="https://yandex.ru/map-widget/v1/?ll=37.827607%2C55.659173&mode=poi&poi%5Bpoint%5D=37.823077%2C55.656539&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D129623926357&z=14.2"
-					width="100" height="341" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+					height="341" style="position:relative; width:100%"></iframe>
 			</div>
 
 
